refactor: product 도메인 테스트코드 리팩토링